--- a/index.html
+++ b/index.html
@@ -17,14 +17,13 @@
 <body>
     <div class=" bg-primary text-white bg-gradient text-center fw-bold"> Weather Dashboard 
     </div>
-    <!-- <i class="fa-solid fa-rainbow"></i> -->
     <div class="row mx-auto">
         <div class="card col-3 border-0">
             <div class="card-body">
                 <div class="fw-bold">Search for a city:</div>
                 <form class="d-flex" role="search">
                     <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success" type="button">Search</button>
+                    <button class="btn btn-dark" type="button">Search</button>
                 </form>
             </div>
         </div>
