condition if no city input

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <div class=" bg-primary text-white bg-gradient text-center fw-bold"> Weather Dashboard 
     </div>
-    <div class="row mx-auto">
+    <div class="row mx-auto" style="height: 100px">
         <div class="card col-3 border-0">
             <div class="card-body">
                 <div class="fw-bold">Search for a city:</div>
