--- a/index.html
+++ b/index.html
@@ -15,22 +15,23 @@
 </head>
 
 <body>
-    <div class=" bg-primary text-white bg-gradient text-center fw-bold"> Weather Dashboard 
+    <div class=" bg-primary text-white bg-gradient text-center fw-bold"> Weather Dashboard
     </div>
-    <div class="row mx-auto" style="height: 100px">
-        <div class="card col-3 border-0">
+    <div class="row " style="height: 100px">
+        <div class="card col-2 border-0">
             <div class="card-body">
                 <div class="fw-bold">Search for a city:</div>
                 <form class="d-flex" role="search">
                     <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                     <button class="btn btn-dark" type="button">Search</button>
                 </form>
+                <div class="list-group" id="searchArea">
+                </div>
             </div>
         </div>
-        <div class="card col-9 border-0">
-            <div class=" card-body fw-bold currentDay"></div>
-            <div class="currentDayStats"></div>
-            <div class="card-body next5Days row"></div>
+        <div class="card col-10 border-0">
+            <div class=" fw-bold currentDay mb-3"></div>
+            <div class=" next5Days row"></div>
         </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
