included data for next 5 days

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </div>
         <div class="card col-10 border-0">
             <div class=" fw-bold currentDay mb-3"></div>
-            <div class=" next5Days row"></div>
+            <div class=" fw-bold next5Days row"></div>
         </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
