text capitalized first letter instead of all

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </div>
         </div>
         <div class="card col-10 cborder border-secondary" id="weatherData">
-            <div class=" fw-bold currentDay mb-3 "></div>
+            <div class=" fw-bold currentDay mb-3 text-capitalize "></div>
             <div class=" fw-bold next5Days row d-flex"></div>
         </div>
     </div>
