--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </div>
         <div class="card col-10 cborder border-secondary" id="weatherData">
             <div class=" fw-bold currentDay mb-3 text-capitalize "></div>
-            <div class=" fw-bold next5Days row d-flex"></div>
+            <div class=" fw-bold next5Days row d-flex">5-day Forecast</div>
         </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
