--- a/index.html
+++ b/index.html
@@ -11,24 +11,29 @@
         integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./assets/style.css">
-    <title>Document</title>
+    <title>Weather Dashboard</title>
 </head>
 
 <body>
-    <div class=" bg-primary text-white bg-gradient text-center fw-bold border border-dark border-2 fs-2" id="header"> Weather Dashboard
-    </div>
+    <!-- Header Title -->
+    <div class=" bg-primary text-white bg-gradient text-center fw-bold border border-dark border-2 fs-2" id="header"> Weather Dashboard</div>
+    <!-- Body -->
     <div class="row" id="mainArea">
         <div class="card col-2  border-secondary">
             <div class="card-body">
                 <div class="fw-bold">Search for a city:</div>
                 <form class="d-flex" role="search">
+                    <!-- Search box for user input -->
                     <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                    <!-- Button when ready to search -->
                     <button class="btn btn-secondary" type="button" id="searchBtn">Search</button>
                 </form>
                 <form class="list-group" id="searchArea">
+                    <!-- Saved list of users previous searches -->
                 </form>
             </div>
         </div>
+        <!-- Forecast  -->
         <div class="card col-10 cborder border-secondary" id="weatherData">
             <div class=" fw-bold currentDay mb-3 text-capitalize "></div>
             <div class=" fw-bold next5Days row d-flex">5-day Forecast</div>
